[tool.poetry]
name = "agl-censor"
version = "0.1.0"
description = "This package is made to censor sensitive data in images and extract the contents. NER is planned for the future"
authors = ["maxhild <58726316+maxhild@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.20.0"
Pillow = "^9.0.0"
PyMuPDF = "^1.20.0"
opencv-python-headless = "^4.6.0"
numpy = "^1.23.0"
spacy = "^3.4.0"
regex = "^2022.6.0"
Scikit-learn < "1.3.2"
requests[security] "3"
subprocess32; python_version < "3.2"
numpy = "1.26.1"
flair = "0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
